--- a/.github/workflows/add-to-project-garage-dependabot.yaml
+++ b/.github/workflows/add-to-project-garage-dependabot.yaml
@@ -11,7 +11,7 @@ jobs:
   add-to-project-dependabot:
     secrets:
       SENZING_GITHUB_PROJECT_RW_TOKEN: ${{ secrets.SENZING_GITHUB_PROJECT_RW_TOKEN }}
-    uses: senzing-factory/build-resources/.github/workflows/add-to-project-dependabot.yaml@179-skern
+    uses: senzing-factory/build-resources/.github/workflows/add-to-project-dependabot.yaml@v2
     with:
       project: ${{ vars.SENZING_PROJECT_GARAGE }}
 
