--- a/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub-and-ecr.yaml
@@ -6,15 +6,16 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
 
-permissions:
-  attestations: write
-  contents: write
-  id-token: write
+permissions: {}
 
 jobs:
   docker-push-containers-to-dockerhub-and-ecr:
     outputs:
       status: ${{ job.status }}
+    permissions:
+      attestations: write
+      contents: write
+      id-token: write
     runs-on: ubuntu-latest
 
     steps:
