--- a/.github/workflows/make-github-release-assets.yaml
+++ b/.github/workflows/make-github-release-assets.yaml
@@ -5,19 +5,22 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
-permissions:
-  contents: write
+permissions: {}
 
 jobs:
   build:
     name: publish binaries
     outputs:
       status: ${{ job.status }}
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout repository
         uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - run: echo "Test file" > /tmp/bob.txt
 
