--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,13 +2,14 @@ name: pylint
 
 on: [push]
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   pylint:
     outputs:
       status: ${{ job.status }}
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     strategy:
       matrix:
