--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,8 @@ updates:
     schedule:
       interval: daily
   - package-ecosystem: pip
+    assignees:
+      - docktermj
     cooldown:
       default-days: 21
     directory: /
